--- a/TrainingV2_NoUI.ipynb
+++ b/TrainingV2_NoUI.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -58,21 +56,6 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install faiss-cpu\n",
-        "#!pip install faiss-gpu\n",
-        "\n",
-        "import faiss\n",
-        "print(\"FAISS VERSION:\", faiss.__version__)"
-      ],
-      "metadata": {
-        "id": "TkR8hVsEY2-R"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#@title Unzip File From Drive\n",
         "\n",
         "!unzip -n /content/drive/MyDrive/assets/KiwKiw.zip -d /content\n",
@@ -108,7 +91,7 @@
         "f0method = \"rmvpe_gpu\" # @param [\"pm\", \"dio\", \"harvest\", \"rmvpe\", \"rmvpe_gpu\"]\n",
         "\n",
         "save_frequency = 50 # @param {type:\"slider\", min:0, max:50, step:1}\n",
-        "epoch = 200 # @param {type:\"integer\"}\n",
+        "epoch = 10 # @param {type:\"integer\"}\n",
         "batch_size = \"7\" # @param {type:\"string\"}\n",
         "cache_gpu = True # @param {type:\"boolean\"}\n",
         "\n",
@@ -160,6 +143,17 @@
       ],
       "metadata": {
         "id": "Q1qr2RBnDe7k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install faiss-cpu"
+      ],
+      "metadata": {
+        "id": "vU0qh995qh3E"
       },
       "execution_count": null,
       "outputs": []
@@ -443,7 +437,8 @@
         "\n"
       ],
       "metadata": {
-        "id": "rIreV7qsa3Es"
+        "id": "rIreV7qsa3Es",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
