--- a/TrainingV2_NoUI.ipynb
+++ b/TrainingV2_NoUI.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,8 +48,33 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "jwu07JgqoFON",
-        "cellView": "form"
+        "id": "jwu07JgqoFON"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ===== RVC Training V2 (Python 3.10 ONLY) =====\n",
+        "#!pip uninstall -y torch torchvision torchaudio numpy fairseq omegaconf hydra-core\n",
+        "!pip install pip\n",
+        "\n",
+        "!pip install torch\n",
+        "\n",
+        "#!pip install numpy\n",
+        "!pip install faiss-cpu\n",
+        "\n",
+        "!pip install librosa soundfile scipy tqdm numba\n",
+        "!pip install praat-parselmouth pyworld\n",
+        "!pip install tensorboardX soxr\n",
+        "\n",
+        "!pip install fairseq\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "5bNX5FY2tKW2"
       },
       "execution_count": null,
       "outputs": []
@@ -60,12 +86,11 @@
         "\n",
         "!unzip -n /content/drive/MyDrive/assets/KiwKiw.zip -d /content\n",
         "%cd /content/KiwKiw\n",
-        "!pip install pip==23.3.1\n",
-        "!pip install -r requirements.txt -q"
+        "#!pip install pip==23.3.1\n",
+        "#!pip install -r requirements.txt -q"
       ],
       "metadata": {
-        "id": "ge_97mfpgqTm",
-        "cellView": "form"
+        "id": "ge_97mfpgqTm"
       },
       "execution_count": null,
       "outputs": []
@@ -113,14 +138,24 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install faiss-cpu"
+      ],
+      "metadata": {
+        "id": "IDTDpoCfrQ04"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# @title Process Data\n",
         "command = f\"python infer/modules/train/preprocess.py '{dataset}' {sample_rate} 2 '{now_dir}/logs/{exp_dir}' False 3.0\"\n",
         "print(command)\n",
         "!{command}"
       ],
       "metadata": {
-        "id": "EAY0Hz2pI_bW",
-        "cellView": "form"
+        "id": "EAY0Hz2pI_bW"
       },
       "execution_count": null,
       "outputs": []
@@ -143,17 +178,6 @@
       ],
       "metadata": {
         "id": "Q1qr2RBnDe7k"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install faiss-cpu"
-      ],
-      "metadata": {
-        "id": "vU0qh995qh3E"
       },
       "execution_count": null,
       "outputs": []
@@ -247,7 +271,8 @@
         "    print(result)"
       ],
       "metadata": {
-        "id": "xzurT_PYQOIJ"
+        "id": "xzurT_PYQOIJ",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
