--- a/TrainingV2_NoUI.ipynb
+++ b/TrainingV2_NoUI.ipynb
@@ -138,7 +138,10 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install faiss-cpu"
+        "!pip install faiss-cpu\n",
+        "!pip install yt_dlp\n",
+        "!pip install ffmpeg-python\n",
+        "!pip install av"
       ],
       "metadata": {
         "id": "IDTDpoCfrQ04"
