--- a/TrainingV2_NoUI.ipynb
+++ b/TrainingV2_NoUI.ipynb
@@ -57,7 +57,7 @@
       "cell_type": "code",
       "source": [
         "# ===== RVC Training V2 (Python 3.10 ONLY) =====\n",
-        "#!pip uninstall -y torch torchvision torchaudio numpy fairseq omegaconf hydra-core\n",
+        "!pip install torch torchvision torchaudio numpy fairseq omegaconf hydra-core\n",
         "!pip install pip\n",
         "\n",
         "!pip install torch\n",
