--- a/TrainingV2_NoUI.ipynb
+++ b/TrainingV2_NoUI.ipynb
@@ -57,12 +57,12 @@
       "cell_type": "code",
       "source": [
         "# ===== RVC Training V2 (Python 3.10 ONLY) =====\n",
-        "!pip install torch torchvision torchaudio numpy fairseq omegaconf hydra-core\n",
+        "!pip install torchvision torchaudio omegaconf hydra-core\n",
         "!pip install pip\n",
         "\n",
         "!pip install torch\n",
         "\n",
-        "#!pip install numpy\n",
+        "!pip install numpy\n",
         "!pip install faiss-cpu\n",
         "\n",
         "!pip install librosa soundfile scipy tqdm numba\n",
