--- a/TrainingV2_NoUI.ipynb
+++ b/TrainingV2_NoUI.ipynb
@@ -56,22 +56,49 @@
     {
       "cell_type": "code",
       "source": [
-        "# ===== RVC Training V2 (Python 3.10 ONLY) =====\n",
-        "!pip install torchvision torchaudio omegaconf hydra-core\n",
-        "!pip install pip\n",
+        "# =========================================\n",
+        "# RVC v2 Full Colab Setup - Python 3.10\n",
+        "# =========================================\n",
         "\n",
-        "!pip install torch\n",
+        "# 1️⃣ Ganti Python ke 3.10\n",
+        "!sudo apt-get update\n",
+        "!sudo apt-get install python3.10 python3.10-dev python3.10-venv python3.10-distutils -y\n",
         "\n",
-        "!pip install numpy\n",
-        "!pip install faiss-cpu\n",
+        "!wget https://bootstrap.pypa.io/get-pip.py\n",
+        "!python3.10 get-pip.py\n",
         "\n",
-        "!pip install librosa soundfile scipy tqdm numba\n",
-        "!pip install praat-parselmouth pyworld\n",
-        "!pip install tensorboardX soxr\n",
+        "!sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.12 1\n",
+        "!sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 2\n",
+        "!sudo update-alternatives --config python3\n",
         "\n",
-        "!pip install fairseq\n",
+        "!python3 --version\n",
+        "!pip --version\n",
         "\n",
-        "\n"
+        "# -----------------------------------------\n",
+        "# 2️⃣ Mount Google Drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# -----------------------------------------\n",
+        "# 3️⃣ Unzip Project\n",
+        "!unzip -n /content/drive/MyDrive/assets/KiwKiw.zip -d /content\n",
+        "%cd /content/KiwKiw\n",
+        "\n",
+        "!python3 -m pip install pip==23.3.1\n",
+        "\n",
+        "# -----------------------------------------\n",
+        "# 4️⃣ Install Dependencies (Python 3.10 compatible)\n",
+        "!pip install --upgrade pip\n",
+        "!pip install torch torchvision torchaudio\n",
+        "!pip install fairseq==0.12.2 --no-build-isolation --use-pep517\n",
+        "!pip install faiss-cpu librosa soundfile scipy tqdm numba\n",
+        "!pip install praat-parselmouth pyworld tensorboardX soxr yt_dlp ffmpeg-python av\n",
+        "!pip install yt_dlp\n",
+        "!pip install ffmpeg-python\n",
+        "!pip install av\n",
+        "#!pip install omegaconf hydra-core\n",
+        "#!pip install numpy\n",
+        "!pip install \"omegaconf<2.1\" \"hydra-core<1.1\" numpy==1.25\n"
       ],
       "metadata": {
         "id": "5bNX5FY2tKW2"
@@ -113,7 +140,7 @@
         "version = \"v2\" # @param [\"v1\", \"v2\"]\n",
         "version19 = version\n",
         "\n",
-        "f0method = \"rmvpe_gpu\" # @param [\"pm\", \"dio\", \"harvest\", \"rmvpe\", \"rmvpe_gpu\"]\n",
+        "f0method = \"rmvpe\" # @param [\"pm\", \"dio\", \"harvest\", \"rmvpe\", \"rmvpe_gpu\"]\n",
         "\n",
         "save_frequency = 50 # @param {type:\"slider\", min:0, max:50, step:1}\n",
         "epoch = 10 # @param {type:\"integer\"}\n",
@@ -137,12 +164,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install faiss-cpu\n",
-        "!pip install yt_dlp\n",
-        "!pip install ffmpeg-python\n",
-        "!pip install av"
-      ],
+      "source": [],
       "metadata": {
         "id": "IDTDpoCfrQ04"
       },
@@ -159,6 +181,26 @@
       ],
       "metadata": {
         "id": "EAY0Hz2pI_bW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Paksa downgrade pip dulu\n",
+        "!python3 -m pip install pip==23.3.1\n",
+        "\n",
+        "# Hapus fairseq lama\n",
+        "!pip uninstall fairseq -y\n",
+        "\n",
+        "# Install versi kompatibel langsung dari GitHub\n",
+        "!pip install git+https://github.com/facebookresearch/fairseq@v0.10.2\n",
+        "\n",
+        "!pip install \"omegaconf<2.1\" \"hydra-core<1.1\" numpy==1.25 Cython==0.29.36 regex sacrebleu bitarray\n"
+      ],
+      "metadata": {
+        "id": "bEaoAvogAEWM"
       },
       "execution_count": null,
       "outputs": []
@@ -274,8 +316,7 @@
         "    print(result)"
       ],
       "metadata": {
-        "id": "xzurT_PYQOIJ",
-        "cellView": "form"
+        "id": "xzurT_PYQOIJ"
       },
       "execution_count": null,
       "outputs": []
@@ -465,8 +506,7 @@
         "\n"
       ],
       "metadata": {
-        "id": "rIreV7qsa3Es",
-        "cellView": "form"
+        "id": "rIreV7qsa3Es"
       },
       "execution_count": null,
       "outputs": []
@@ -486,8 +526,7 @@
         "%cd /content/KiwKiw"
       ],
       "metadata": {
-        "id": "FgJuNeAwx5Y_",
-        "cellView": "form"
+        "id": "FgJuNeAwx5Y_"
       },
       "execution_count": null,
       "outputs": []
