--- a/TrainingV2_NoUI.ipynb
+++ b/TrainingV2_NoUI.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "gpuType": "T4",
+      "runtime_attributes": {
+        "runtime_version": "2025.07"
+      },
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +44,18 @@
     {
       "cell_type": "code",
       "source": [
+        "import sys\n",
+        "print(sys.version)"
+      ],
+      "metadata": {
+        "id": "FPRPSotGXkuv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@title Mount Drive\n",
         "\n",
         "from google.colab import drive\n",
@@ -57,48 +71,50 @@
       "cell_type": "code",
       "source": [
         "# =========================================\n",
-        "# RVC v2 Full Colab Setup - Python 3.10\n",
+        "# RVC v2 Full Colab Setup - Python 3.11\n",
         "# =========================================\n",
         "\n",
-        "# 1️⃣ Ganti Python ke 3.10\n",
-        "!sudo apt-get update\n",
-        "!sudo apt-get install python3.10 python3.10-dev python3.10-venv python3.10-distutils -y\n",
+        "# 1️⃣ Upgrade pip (jika perlu)\n",
+        "#!python3 -m pip install --upgrade pip\n",
+        "!python3 -m pip install pip==23.3.1\n",
         "\n",
-        "!wget https://bootstrap.pypa.io/get-pip.py\n",
-        "!python3.10 get-pip.py\n",
-        "\n",
-        "!sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.12 1\n",
-        "!sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 2\n",
-        "!sudo update-alternatives --config python3\n",
-        "\n",
-        "!python3 --version\n",
-        "!pip --version\n",
         "\n",
         "# -----------------------------------------\n",
         "# 2️⃣ Mount Google Drive\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
+        "#from google.colab import drive\n",
+        "#drive.mount('/content/drive')\n",
         "\n",
         "# -----------------------------------------\n",
-        "# 3️⃣ Unzip Project\n",
-        "!unzip -n /content/drive/MyDrive/assets/KiwKiw.zip -d /content\n",
-        "%cd /content/KiwKiw\n",
-        "\n",
-        "!python3 -m pip install pip==23.3.1\n",
+        "# 3️⃣ Unzip Project (jika ada)\n",
+        "# !unzip -n /content/drive/MyDrive/assets/KiwKiw.zip -d /content\n",
+        "# %cd /content/KiwKiw\n",
         "\n",
         "# -----------------------------------------\n",
-        "# 4️⃣ Install Dependencies (Python 3.10 compatible)\n",
-        "!pip install --upgrade pip\n",
-        "!pip install torch torchvision torchaudio\n",
-        "!pip install fairseq==0.12.2 --no-build-isolation --use-pep517\n",
-        "!pip install faiss-cpu librosa soundfile scipy tqdm numba\n",
+        "# 4️⃣ Install PyTorch dulu (untuk torchcrepe & torchfcpe)\n",
+        "!pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
+        "\n",
+        "# -----------------------------------------\n",
+        "# 5️⃣ Pastikan numba & llvmlite kompatibel Python 3.11\n",
+        "!pip install llvmlite==0.43.0 numba==0.60.0\n",
+        "\n",
+        "# -----------------------------------------\n",
+        "# 6️⃣ Install fairseq versi stabil (dari GitHub)\n",
+        "#!pip uninstall fairseq -y\n",
+        "#!pip install git+https://github.com/facebookresearch/fairseq@v0.10.2\n",
+        "\n",
+        "# -----------------------------------------\n",
+        "# 7️⃣ Install dependencies lainnya\n",
+        "!pip install numpy>=1.26 Cython==0.29.36\n",
+        "!pip install faiss-cpu librosa==0.9.1 resampy>=0.4.3 soundfile>=0.12.1 scipy tqdm\n",
         "!pip install praat-parselmouth pyworld tensorboardX soxr yt_dlp ffmpeg-python av\n",
-        "!pip install yt_dlp\n",
-        "!pip install ffmpeg-python\n",
-        "!pip install av\n",
-        "#!pip install omegaconf hydra-core\n",
-        "#!pip install numpy\n",
-        "!pip install \"omegaconf<2.1\" \"hydra-core<1.1\" numpy==1.25\n"
+        "!pip install gradio\n",
+        "!pip install pydub\n",
+        "!pip install Jinja2>=3.1.2 json5 Markdown matplotlib>=3.7.0 matplotlib-inline>=0.1.3\n",
+        "!pip install scikit-learn tensorboard tornado>=6.1 Werkzeug>=2.2.3\n",
+        "!pip install uc-micro-py>=1.0.1 sympy>=1.11.1 tabulate>=0.8.10 PyYAML>=6.0\n",
+        "!pip install pyasn1>=0.4.8 pyasn1-modules>=0.2.8 fsspec>=2022.11.0 absl-py>=1.2.0 audioread uvicorn>=0.21.1 colorama>=0.4.5\n",
+        "!pip install torchcrepe==0.0.20 fastapi==0.88 torchfcpe ffmpy==0.3.1 python-dotenv>=1.0.0\n",
+        "!pip install \"omegaconf<2.1\" \"hydra-core<1.1\" fairseq==0.12.2"
       ],
       "metadata": {
         "id": "5bNX5FY2tKW2"
@@ -188,16 +204,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Paksa downgrade pip dulu\n",
         "!python3 -m pip install pip==23.3.1\n",
         "\n",
-        "# Hapus fairseq lama\n",
         "!pip uninstall fairseq -y\n",
+        "!pip uninstall omegaconf hydra-core -y\n",
         "\n",
-        "# Install versi kompatibel langsung dari GitHub\n",
-        "!pip install git+https://github.com/facebookresearch/fairseq@v0.10.2\n",
-        "\n",
-        "!pip install \"omegaconf<2.1\" \"hydra-core<1.1\" numpy==1.25 Cython==0.29.36 regex sacrebleu bitarray\n"
+        "!pip install \"omegaconf<2.1\" \"hydra-core<1.1\" fairseq==0.12.2"
       ],
       "metadata": {
         "id": "bEaoAvogAEWM"
