--- a/TrainingV2_NoUI.ipynb
+++ b/TrainingV2_NoUI.ipynb
@@ -8,6 +8,7 @@
       "runtime_attributes": {
         "runtime_version": "2025.07"
       },
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -16,7 +17,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -56,20 +58,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Mount Drive\n",
-        "\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "id": "jwu07JgqoFON"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# =========================================\n",
         "# RVC v2 Full Colab Setup - Python 3.11\n",
         "# =========================================\n",
@@ -99,8 +87,8 @@
         "\n",
         "# -----------------------------------------\n",
         "# 6️⃣ Install fairseq versi stabil (dari GitHub)\n",
-        "#!pip uninstall fairseq -y\n",
-        "#!pip install git+https://github.com/facebookresearch/fairseq@v0.10.2\n",
+        "!pip install git+https://github.com/BF667/fairseq/releases/download/fixed-packages/fairseq-0.12.3-cp311-cp311-win_amd64.whl\n",
+        "\n",
         "\n",
         "# -----------------------------------------\n",
         "# 7️⃣ Install dependencies lainnya\n",
@@ -114,10 +102,39 @@
         "!pip install uc-micro-py>=1.0.1 sympy>=1.11.1 tabulate>=0.8.10 PyYAML>=6.0\n",
         "!pip install pyasn1>=0.4.8 pyasn1-modules>=0.2.8 fsspec>=2022.11.0 absl-py>=1.2.0 audioread uvicorn>=0.21.1 colorama>=0.4.5\n",
         "!pip install torchcrepe==0.0.20 fastapi==0.88 torchfcpe ffmpy==0.3.1 python-dotenv>=1.0.0\n",
-        "!pip install \"omegaconf<2.1\" \"hydra-core<1.1\" fairseq==0.12.2"
+        "#!pip install \"omegaconf<2.1\" \"hydra-core<1.1\" fairseq==0.12.2\n"
       ],
       "metadata": {
         "id": "5bNX5FY2tKW2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install fairseq-fixed\n",
+        "!pip install fastapi==0.116.1 pydantic==2.11.2\n",
+        "\n",
+        "import fairseq\n",
+        "print(fairseq.__version__)"
+      ],
+      "metadata": {
+        "id": "oFQCSwC34Jkh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Mount Drive\n",
+        "\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "jwu07JgqoFON"
       },
       "execution_count": null,
       "outputs": []
@@ -203,14 +220,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python3 -m pip install pip==23.3.1\n",
-        "\n",
-        "!pip uninstall fairseq -y\n",
-        "!pip uninstall omegaconf hydra-core -y\n",
-        "\n",
-        "!pip install \"omegaconf<2.1\" \"hydra-core<1.1\" fairseq==0.12.2"
-      ],
+      "source": [],
       "metadata": {
         "id": "bEaoAvogAEWM"
       },
