--- a/TrainingV2_NoUI.ipynb
+++ b/TrainingV2_NoUI.ipynb
@@ -85,10 +85,6 @@
         "# 5️⃣ Pastikan numba & llvmlite kompatibel Python 3.11\n",
         "!pip install llvmlite==0.43.0 numba==0.60.0\n",
         "\n",
-        "# -----------------------------------------\n",
-        "# 6️⃣ Install fairseq versi stabil (dari GitHub)\n",
-        "!pip install git+https://github.com/BF667/fairseq/releases/download/fixed-packages/fairseq-0.12.3-cp311-cp311-win_amd64.whl\n",
-        "\n",
         "\n",
         "# -----------------------------------------\n",
         "# 7️⃣ Install dependencies lainnya\n",
@@ -101,8 +97,14 @@
         "!pip install scikit-learn tensorboard tornado>=6.1 Werkzeug>=2.2.3\n",
         "!pip install uc-micro-py>=1.0.1 sympy>=1.11.1 tabulate>=0.8.10 PyYAML>=6.0\n",
         "!pip install pyasn1>=0.4.8 pyasn1-modules>=0.2.8 fsspec>=2022.11.0 absl-py>=1.2.0 audioread uvicorn>=0.21.1 colorama>=0.4.5\n",
-        "!pip install torchcrepe==0.0.20 fastapi==0.88 torchfcpe ffmpy==0.3.1 python-dotenv>=1.0.0\n",
-        "#!pip install \"omegaconf<2.1\" \"hydra-core<1.1\" fairseq==0.12.2\n"
+        "!pip install torchcrepe==0.0.20 torchfcpe ffmpy==0.3.1 python-dotenv>=1.0.0\n",
+        "#!pip install \"omegaconf<2.1\" \"hydra-core<1.1\" fairseq==0.12.2\n",
+        "!pip install fastapi==0.116.1 pydantic==2.11.2\n",
+        "!pip install matplotlib==3.7.1\n",
+        "!pip install fairseq-fixed\n",
+        "\n",
+        "import fairseq\n",
+        "print(fairseq.__version__)\n"
       ],
       "metadata": {
         "id": "5bNX5FY2tKW2"
@@ -113,9 +115,6 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install fairseq-fixed\n",
-        "!pip install fastapi==0.116.1 pydantic==2.11.2\n",
-        "\n",
         "import fairseq\n",
         "print(fairseq.__version__)"
       ],
@@ -176,7 +175,7 @@
         "f0method = \"rmvpe\" # @param [\"pm\", \"dio\", \"harvest\", \"rmvpe\", \"rmvpe_gpu\"]\n",
         "\n",
         "save_frequency = 50 # @param {type:\"slider\", min:0, max:50, step:1}\n",
-        "epoch = 10 # @param {type:\"integer\"}\n",
+        "epoch = 200 # @param {type:\"integer\"}\n",
         "batch_size = \"7\" # @param {type:\"string\"}\n",
         "cache_gpu = True # @param {type:\"boolean\"}\n",
         "\n",
@@ -339,6 +338,15 @@
       ],
       "metadata": {
         "id": "xzurT_PYQOIJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "g4j3wondHrsL"
       },
       "execution_count": null,
       "outputs": []
@@ -529,6 +537,18 @@
       ],
       "metadata": {
         "id": "rIreV7qsa3Es"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "WFEMVO6pEvUV"
       },
       "execution_count": null,
       "outputs": []
