--- a/SUCCESS V2 TrainingV2_NoUI.ipynb
+++ b/SUCCESS V2 TrainingV2_NoUI.ipynb
@@ -125,9 +125,8 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install fairseq-fixed\n",
-        "\n",
-        "!pip show fairseq-fixed\n",
+        "#!pip install fairseq-fixed\n",
+        "#!pip show fairseq-fixed\n",
         "\n",
         "import importlib.metadata\n",
         "print(importlib.metadata.version(\"fairseq-fixed\"))\n",
@@ -177,9 +176,9 @@
         "import os\n",
         "\n",
         "# @title Create Model Folder\n",
-        "model_name = \"YUVORIA\" # @param {type:\"string\"}\n",
+        "model_name = \"YUVORIA_LONG\" # @param {type:\"string\"}\n",
         "exp_dir = model_name\n",
-        "dataset = \"/content/drive/MyDrive/dataset/YUVORIA\" # @param {type:\"string\"}\n",
+        "dataset = \"/content/drive/MyDrive/dataset/YUVORIA_LONG\" # @param {type:\"string\"}\n",
         "sample_rate = \"48000\" # @param [\"40000\", \"48000\"]\n",
         "ksample_rate = \"48k\"\n",
         "if sample_rate == \"40000\":\n",
@@ -261,6 +260,19 @@
       ],
       "metadata": {
         "id": "Q1qr2RBnDe7k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip uninstall -y faiss faiss-cpu numpy\n",
+        "!pip install numpy==1.26.4\n",
+        "!pip install faiss-cpu==1.8.0.post1\n"
+      ],
+      "metadata": {
+        "id": "njAcI3xGOWSg"
       },
       "execution_count": null,
       "outputs": []
