--- a/SUCCESS V2 TrainingV2_NoUI.ipynb
+++ b/SUCCESS V2 TrainingV2_NoUI.ipynb
@@ -83,12 +83,15 @@
         "# 5️⃣ Pastikan numba & llvmlite kompatibel Python 3.11\n",
         "!pip install llvmlite==0.43.0 numba==0.60.0\n",
         "\n",
+        "!pip uninstall -y numpy faiss-cpu scipy scikit-learn\n",
+        "!pip uninstall -y tensorboard tensorflow tensorflow-estimator fairseq fairseq-fixed\n",
+        "\n",
         "# -----------------------------------------\n",
         "# 7️⃣ Install dependencies lainnya\n",
         "!pip install Cython==0.29.36\n",
-        "!pip install numpy==1.26.4\n",
-        "!pip install faiss-cpu librosa==0.9.1 resampy>=0.4.3 soundfile>=0.12.1 scipy==1.10.1 tqdm\n",
-        "!pip install praat-parselmouth pyworld tensorboardX soxr yt_dlp ffmpeg-python av\n",
+        "!pip install numpy==1.24.4\n",
+        "!pip install faiss-cpu==1.7.4 librosa==0.9.1 resampy>=0.4.3 soundfile>=0.12.1 scipy==1.10.1 tqdm\n",
+        "!pip install praat-parselmouth pyworld soxr yt_dlp ffmpeg-python av\n",
         "!pip install gradio\n",
         "!pip install pydub\n",
         "!pip install Jinja2>=3.1.2 json5 Markdown matplotlib>=3.7.0 matplotlib-inline>=0.1.3\n",
@@ -97,9 +100,9 @@
         "!pip install pyasn1>=0.4.8 pyasn1-modules>=0.2.8 fsspec>=2022.11.0 absl-py>=1.2.0 audioread uvicorn>=0.21.1 colorama>=0.4.5\n",
         "!pip install torchcrepe==0.0.20 torchfcpe ffmpy==0.3.1 python-dotenv>=1.0.0\n",
         "!pip install fastapi==0.116.1 pydantic==2.11.2\n",
+        "!pip install tensorboard==2.12.3\n",
         "!pip install fairseq-fixed\n",
-        "!pip install tensorboard==2.13.0\n",
-        "!pip install matplotlib==3.7.3\n"
+        "\n"
       ],
       "metadata": {
         "id": "5bNX5FY2tKW2"
@@ -110,11 +113,15 @@
     {
       "cell_type": "code",
       "source": [
-        "#!pip uninstall -y tensorflow tensorboard numpy\n",
-        "#!pip install tensorboard==2.13.0\n",
-        "#!pip install matplotlib==3.7.3\n",
-        "#!pip install numpy==1.23.5\n",
-        "#!pip install numpy==1.26.4"
+        "# bersihkan\n",
+        "#!pip uninstall -y tensorboard tensorflow tensorflow-estimator fairseq fairseq-fixed\n",
+        "\n",
+        "# install tensorboard lama\n",
+        "#!pip install tensorboard==2.12.3\n",
+        "\n",
+        "# install fairseq\n",
+        "#!pip install fairseq-fixed\n",
+        "\n"
       ],
       "metadata": {
         "id": "oFQCSwC34Jkh"
@@ -125,17 +132,20 @@
     {
       "cell_type": "code",
       "source": [
-        "#!pip install fairseq-fixed\n",
-        "#!pip show fairseq-fixed\n",
+        "import torch\n",
+        "import numpy\n",
+        "import faiss\n",
+        "import fairseq\n",
+        "import tensorboard\n",
         "\n",
-        "import importlib.metadata\n",
-        "print(importlib.metadata.version(\"fairseq-fixed\"))\n",
-        "\n",
-        "#import fairseq\n",
-        "#print(fairseq.__version__)"
+        "print(\"torch:\", torch.__version__)\n",
+        "print(\"numpy:\", numpy.__version__)\n",
+        "print(\"faiss:\", faiss.__version__)\n",
+        "print(\"tensorboard:\", tensorboard.__version__)\n",
+        "print(fairseq.__version__)"
       ],
       "metadata": {
-        "id": "Clvq8Fq5Kae6"
+        "id": "p69wyUE-V82c"
       },
       "execution_count": null,
       "outputs": []
@@ -260,19 +270,6 @@
       ],
       "metadata": {
         "id": "Q1qr2RBnDe7k"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip uninstall -y faiss faiss-cpu numpy\n",
-        "!pip install numpy==1.26.4\n",
-        "!pip install faiss-cpu==1.8.0.post1\n"
-      ],
-      "metadata": {
-        "id": "njAcI3xGOWSg"
       },
       "execution_count": null,
       "outputs": []
