--- a/SUCCESS V2 TrainingV2_NoUI.ipynb
+++ b/SUCCESS V2 TrainingV2_NoUI.ipynb
@@ -77,7 +77,8 @@
         "\n",
         "# -----------------------------------------\n",
         "# 4️⃣ Install PyTorch dulu (untuk torchcrepe & torchfcpe)\n",
-        "!pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
+        "#!pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
+        "!pip install torch==2.1.2 torchvision==0.16.2 torchaudio==2.1.2 --index-url https://download.pytorch.org/whl/cu118\n",
         "\n",
         "# -----------------------------------------\n",
         "# 5️⃣ Pastikan numba & llvmlite kompatibel Python 3.11\n",
@@ -85,6 +86,7 @@
         "\n",
         "!pip uninstall -y numpy faiss-cpu scipy scikit-learn\n",
         "!pip uninstall -y tensorboard tensorflow tensorflow-estimator fairseq fairseq-fixed\n",
+        "!pip uninstall -y matplotlib\n",
         "\n",
         "# -----------------------------------------\n",
         "# 7️⃣ Install dependencies lainnya\n",
@@ -94,15 +96,14 @@
         "!pip install praat-parselmouth pyworld soxr yt_dlp ffmpeg-python av\n",
         "!pip install gradio\n",
         "!pip install pydub\n",
-        "!pip install Jinja2>=3.1.2 json5 Markdown matplotlib>=3.7.0 matplotlib-inline>=0.1.3\n",
+        "!pip install Jinja2>=3.1.2 json5 Markdown matplotlib==3.7.3 matplotlib-inline>=0.1.3\n",
         "!pip install scikit-learn tornado>=6.1 Werkzeug>=2.2.3\n",
         "!pip install uc-micro-py>=1.0.1 sympy>=1.11.1 tabulate>=0.8.10 PyYAML>=6.0\n",
         "!pip install pyasn1>=0.4.8 pyasn1-modules>=0.2.8 fsspec>=2022.11.0 absl-py>=1.2.0 audioread uvicorn>=0.21.1 colorama>=0.4.5\n",
         "!pip install torchcrepe==0.0.20 torchfcpe ffmpy==0.3.1 python-dotenv>=1.0.0\n",
         "!pip install fastapi==0.116.1 pydantic==2.11.2\n",
         "!pip install tensorboard==2.12.3\n",
-        "!pip install fairseq-fixed\n",
-        "\n"
+        "!pip install fairseq-fixed\n"
       ],
       "metadata": {
         "id": "5bNX5FY2tKW2"
@@ -255,6 +256,18 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip uninstall -y torch torchvision torchaudio\n",
+        "!pip install torch==2.1.2 torchvision==0.16.2 torchaudio==2.1.2 --index-url https://download.pytorch.org/whl/cu118\n"
+      ],
+      "metadata": {
+        "id": "zvZ0WQURiw3d"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# @title Feature Extraction\n",
         "\n",
         "if f0method != \"rmvpe_gpu\":\n",
@@ -364,15 +377,6 @@
       ],
       "metadata": {
         "id": "xzurT_PYQOIJ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "g4j3wondHrsL"
       },
       "execution_count": null,
       "outputs": []
